--- a/.github/workflows/QA_Integration_Deployment.yml
+++ b/.github/workflows/QA_Integration_Deployment.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Build
         env:
           CI: false
-          REACT_APP_API_URL: ${{env.API_URL}}
-        run: ng build
+        APP_API_URL: ${{env.API_URL}}
+        run: npm run build -- --prod
 
       - name:  Setup environment vars
         env:
