Implement GitHub WorkFlows. CI

--- a/.github/workflows/QA_Integration_Deployment.yml
+++ b/.github/workflows/QA_Integration_Deployment.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build
         env:
           CI: false
-        APP_API_URL: ${{env.API_URL}}
+        API_URL: ${{env.API_URL}}
         run: npm run build -- --prod
 
       - name:  Setup environment vars
