--- a/.github/workflows/QA_Integration_Deployment.yml
+++ b/.github/workflows/QA_Integration_Deployment.yml
@@ -1,36 +1,17 @@
-name: QA INTEGRATION AND DEPLOY
+name: QA_Integration_Deployment
 
 on:
   push:
-    tags:
-      - 'v*'
-  workflow_dispatch:
+    branches:
+      - main
 
 env:
   API_URL: http://localhost:9087/api/v1/
   SERVICE_NAME: qa-ViaSoft
 
 jobs:
-  release:
+  build:
     runs-on: ubuntu-latest
-
-    outputs:
-      version: ${{ steps.release_version.outputs.version }}
-
-    steps:
-      - uses: actions/checkout@main
-        with:
-          fetch-depth: 0
-
-      - name: Release version
-        id: release_version
-        run: |
-          output=$(git describe --tags --abbrev=0)
-          echo "::set-output name=version::$output"
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [release]
 
     steps:
       - uses: actions/checkout@master
@@ -38,15 +19,12 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
-          node-version: "14.x"
-
+          node-version: '14.x'
+          cache: 'npm'
       - name: Install dependencies
         run: npm install
 
-      - name: Setup build environment
+      - name:  Setup environment vars
         env:
-          VERSION: ${{ needs.release.outputs.version }}
-        run: eval "echo \"$(cat src/environments/environment.prod.ts)\"" > src/environments/environment.prod.ts
-
-    
-
+          SERVICE_NAME: ${{ env.SERVICE_NAME }}
+        run: eval "echo \"$(cat app.yaml)\"" > app.yaml
